# TriagaSOAR

./: .env.example  .gitignore  Architecture.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json
auth/: Cargo.toml  Dockerfile
auth/src/: main.rs
auth/src/crypto/: mod.rs
auth/src/db/: audit.rs  devices.rs  mod.rs  sessions.rs  tokens.rs  users.rs
auth/src/middleware/: mod.rs  ratelimit.rs  session.rs
auth/src/proxy/: mod.rs
auth/src/routes/: login.rs  mod.rs  sat.rs  users.rs
auth/src/totp/: mod.rs
data/scubagear/: status.json
docker/splunk/: Dockerfile
integrations/maester/: Dockerfile  run_maester.ps1
integrations/scubagear/: .dockerignore  Dockerfile  patch_windows_principal.py  run_scubagear.ps1
integrations/splunk/: Dockerfile
integrations/velociraptor/: setup.sh
integrations/wazuh/: info.txt
postgres/: Dockerfile
postgres/init/: 01_schema.sql  02_audit.sql  03_seed.sql  04_update_passwords.sh
scripts/: attack-simulation.sh  demo.sh  rebuild.sh  reset-db.sh  splunk-query.sh  start.sh  stop.sh  test-webhook.sh
soc-agent/: .dockerignore  Dockerfile  agent.py  auth0.py  blast_radius.py  database.py  entra.py  entra_endpoints.py  llm_client.py  main.py  mitre.py  monitor.py  okta.py  patterns.py  playbooks.py  report.py  requirements.txt  splunk_mcp.py  streaming.py  threat_intel.py  velociraptor.py  webhook.py
web-backend/: .dockerignore  Cargo.toml  Dockerfile
web-frontend/: .dockerignore  .env.example  Dockerfile  astro.config.mjs  package-lock.json  package.json
web-ui/: Cargo.toml  Dockerfile
(+58 files in other folders)
