[package]
name = "soc-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace", "timeout"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client", "client-legacy", "http1"] }
http-body-util = "0.1"

# Database — sqlx 0.8 supports Rust 1.85, 0.9 requires 1.94
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Crypto
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
base32 = "0.4"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config + logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1